--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,22 @@ body {
   flex-direction: column;
 }
 
+main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-section {
+  background-color: rgb(11, 46, 82);
+  height: 100%;
+  width: 100%;
+}
+
+.sides {
+  width: 15%;
+  background-color: rgb(18, 75, 133);
+}
+
 
 header {
   height: 85px;
