--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,57 @@ main {
   flex: 1;
 }
 
+.main-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-top-half {
+  display: flex;
+  background-color: rgb(10, 45, 81);
+  height: 40%;
+}
+
+#home-intro {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(10, 45, 81);
+  height: 100%;
+  width: 70%;
+  color: floralwhite;
+}
+
+#home-intro h2 {
+  margin: 0;
+  padding: 20px 10px;
+}
+
+#home-intro p {
+  flex-wrap: wrap;
+  font-size: 1.5rem;
+}
+
+#home-img {
+  box-sizing: border-box;
+  justify-content: center;
+  margin: 0;
+  padding: 10px;
+  display: flex;
+  object-fit: scale-down;
+}
+
+#home-quote {
+  text-align: center;
+  font-size: 4rem;
+  color: floralwhite;
+  font-family: cursive;
+}
+
+.main-bottom-half {
+  background-color: rgb(10, 45, 81);
+  flex-grow: 1;
+}
+
 footer {
   display: flex;
   justify-content: center;
@@ -109,7 +160,3 @@ footer a {
 .icon-twitter:hover {
   color: #0d8ce2
 }
-
-/* footer a:hover {
-  color: red;
-} */
