--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ main {
   flex-wrap: wrap;
   font-size: 1.5rem;
   padding: 20px;
+  margin-top: 0;
 }
 
 #home-img {
@@ -164,6 +165,38 @@ main {
 .main-bottom-half {
   background-color: rgb(10, 45, 81);
   flex-grow: 1;
+}
+
+.portfolio-main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(11, 46, 82);
+  height: 100%;
+  width: 100%;
+  color: floralwhite;
+}
+
+.portfolio-main-section h2 {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.portfolio-main-section section {
+  margin: 20px;
+  width: 80%;
+  height: min-content;
+  background-color: rgb(23, 96, 171);
+}
+
+.portfolio-main-section h3 {
+  font-size: 1.3rem;
+  padding: 0 15px;
+  color: floralwhite;
+}
+
+.project p {
+  padding: 0 10px;
 }
 
 footer {
