--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,11 @@ main {
   color: floralwhite;
 }
 
+.project {
+  border-radius: 25px;
+  padding: 10px;
+}
+
 .project p {
   padding: 0 10px;
 }
