--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ main {
   flex-direction: column;
   align-items: center;
   background-color: rgb(11, 46, 82);
-  height: 100%;
+  height: auto;
   width: 100%;
   color: floralwhite;
 }
@@ -183,6 +183,7 @@ main {
 }
 
 .portfolio-main-section section {
+  flex-grow: 1;
   margin: 20px;
   width: 80%;
   height: min-content;
